Set clock frequency.

--- a/upduino/Makefile
+++ b/upduino/Makefile
@@ -1,9 +1,12 @@
 
+
+NEXTPNR_PARAMS = --up5k --package sg48 --json chip.json --pcf upduino_v2.pcf --asc chip.asc --freq 6
+
 chip.bin: chip.asc
 	icepack $< $@
 
 chip.asc: chip.json upduino_v2.pcf
-	nextpnr-ice40 --up5k --package sg48 --json chip.json --pcf upduino_v2.pcf --asc chip.asc   # run place and route
+	nextpnr-ice40 $(NEXTPNR_PARAMS)
 
 chip.json: ../spinal/LedMatrixTop.v
 	yosys -q -p "synth_ice40 -json $@" $<
@@ -12,9 +15,8 @@ chip.json: ../spinal/LedMatrixTop.v
 flash:
 	iceprog chip.bin
 
-.PHONY: gui
-gui:
-	nextpnr-ice40 --up5k --package sg48 --json chip.json --pcf upduino_v2.pcf --asc chip.asc --gui   # run place and route
+gui: chip.json upduino_v2.pcf
+	nextpnr-ice40 $(NEXTPNR_PARAMS) --gui
 
 .PHONY: clean
 clean:
